apps/base/minio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: dev
spec:
  selector:
    app: minio
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: minio-api
  namespace: dev
spec:
  selector:
    app: minio
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
